--- a/index.html
+++ b/index.html
@@ -10,24 +10,14 @@
 
   <title>Frontend Mentor | Social links profile</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
 </head>
 
-<body>
-  <div id="app"></div>
-  <div class="attribution">
+<body class="text-white font-sans h-dvh bg-offblack flex flex-col items-center justify-center">
+  <div id="app">
+  </div>
+  <div class="text-[8px]">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Moses</a>.
   </div>
 </body>
 <noscript>Kindly enable javascript to view this page</noscript>
