Add styles for desktop design

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="text-white font-sans h-dvh bg-offblack flex flex-col items-center justify-center">
-  <div id="app">
+  <div id="app" class="md:w-3/12">
   </div>
   <div class="text-[8px]">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
