--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <body class="text-white font-sans h-dvh bg-offblack flex flex-col items-center justify-center">
   <div id="app" class="md:w-3/12">
   </div>
-  <div class="text-[8px]">
+  <footer class="text-[8px]">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Moses</a>.
-  </div>
+    Coded by <a href="https://www.frontendmentor.io/profile/mbtenkorang">Moses</a>.
+  </footer>
 </body>
 <noscript>Kindly enable javascript to view this page</noscript>
 <script type="module" src="./src/main.js"></script>
